3529 Allow access to restricted native methods required by Graal/Truffle on JDK ≥ 22